expanded recognized top player substrings to top100 in MIOM 2013 Rankings

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,13 @@
   <h3>Recent Updates</h3>
 
   <div class="col-md-3 col-sm-6 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
+  <ul>
+    <li> expanded recognized top player substrings to top100 in MIOM 2013 Rankings </li>
+  </ul></div></div>
+  </div>
+
+  <div class="col-md-3 col-sm-6 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 6, 2015 </h5>
   <ul>
     <li> fixed bug in which parse_challonge.py would break if a DQ score was detected </li>
@@ -22,7 +29,7 @@
     <li> Unicode characters in tags now parseable in /parse_challonge. __str__ functions for models Set and User now encodes variable non-integer values into Unicode, meaning that model columns now support Unicode strings </li>
     <li> regex expressions now recognize different spellings of tags and simple tags </li>
     <li> working as intended soft fix for unrecognized Tournament names in parse_challonge.py </li>
-    <li> expanded recognized top player substrings to MIOM 2014 Top 100 Rankings </li>
+    <li> expanded recognized top player substrings to top 100 in MIOM 2014 Top 100 Rankings </li>
   </ul></div></div>
   </div>
 
