more bugtesting for recognized players; heroku checkpoint

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
   <ul>
     <li> expanded recognized top player substrings to top100 in MIOM 2013 Rankings </li>
+    <li> more bugtesting for recognized players; heroku checkpoint </li>
   </ul></div></div>
   </div>
 
