--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li> expanded recognized top player substrings to top100 in MIOM 2013 Rankings </li>
     <li> more bugtesting for recognized players; heroku checkpoint </li>
+    <li> reformatted user.html profile page, standardized tables </li>
   </ul></div></div>
   </div>
 
