--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,46 +4,42 @@
 {% block content %}
 <div class="container">
   <header class="jumbotron ">
-  <table> <!-- Puts things into a table format neatly -->
-    <tr valign="top"> <!-- HTML table with two columns and two rows -->
-      <td>
-        <h1><a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> 
+    <h1><a href="{{ url_for("user", tag=user.tag) }}">{{user.tag}}</a></h1>
 
-          {% if user.region %}
-            <p>
-            <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
-            </p>
+    <h3>
+      {% if user.region %}
+        <b><a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a></b>
+      {% else %}
+        No Region
+      {% endif %}
+    </h3>
+
+    <h3><b>Main:</b>
+      {% if user.main %}
+        <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
+      {% else %}
+        Unchosen
+        <!-- <a href="{{ url_for("character", character="Unchosen") }}">Unchosen</a> -->
+        {% endif %}
+    </h3>
+
+    <h3>
+      {% if user.secondaries %}
+        <b>Secondaries:</b> 
+          {% if user_secondaries|length > 0 %}
+            {{ user_secondaries }} 
           {% else %}
-          <p><b>No Region</b></p>
+            None
           {% endif %}
+      {% endif %}
+    </h3>
 
+    <h3>
+    <!-- Route to edit User 
+    <a href="{{ url_for("user_edit", user=user.tag) }}">Edit User</a>
+    -->
+    </h3>
 
-          <p><b>Main:</b>
-          {% if user.main %}
-            <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
-          {% else %}
-            Unchosen
-            <!-- <a href="{{ url_for("character", character="Unchosen") }}">Unchosen</a> -->
-          {% endif %}
-          </p>
-
-          {% if user.secondaries %}
-          <p><b>Secondaries:</b> 
-            {% if user_secondaries|length > 0 %}
-              {{ user_secondaries }} 
-            {% else %}
-              None
-            {% endif %}
-          </p>
-          {% endif %}
-
-          <!-- Route to edit User 
-          <a href="{{ url_for("user_edit", user=user.tag) }}">Edit User</a>
-          -->
-
-      </td>
-    </tr>
-  </table>
   </header>
   <hr>
 
