added route /about and included that information in /index

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,6 +49,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                   <li>
+                    <a href="{{ url_for('about') }}">About</a>
+                  </li>
+                  <li>
                     <a href="{{ url_for('browse_tournaments') }}">Browse Tournaments</a>
                   </li>
                   <li>
@@ -94,7 +97,7 @@
   <hr>
   <div class="container">
     <footer>
-      <b>© 2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Version 0.9</b>
+      <b>© 2015 SmashStats | <a style="color: #E8E8E8" href="mailto:smashstats@example.com">smashstats@gmail.com</a> | Version 0.91</b>
     </footer>
   </div>
 
