--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,9 +5,11 @@
   <header class="jumbotron">
     <h1>About Smashstats</h1>
     <!-- <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div> -->
-    <p>Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players.</p>
+    <p>Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players. The application intelligently recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. You may search for a particular player or tournament using the search form in the navigation bar at the top of the page, or browse the database using the other links in the navigation bar.</p>
 
-    <p>Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information is automatically generated. Additionally, no player information is automatically entered besides their tag and set history; this information includes region, main, and secondary characters. The tournament database currently holds final bracket data for all Nationals since 2015.</p>
+    <p>Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and set history; this information includes region, main, and secondary characters. The tournament database currently holds final bracket data for all Nationals since 2015.</p>
+
+    <p>If you are interested in this project and would like to contribute, contact the developers at: <a href="mailto:smashstats@example.com"><b>smashstats@gmail.com</b></a></p>
 
   </header>
 </div>
