--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,9 @@
   <header class="jumbotron">
     <h1>Welcome to SmashStats!</h1>
     <!-- <div><h3><a href="{{url_for("browse_tournaments")}}">Browse Recent Tournaments</a></h3></div> -->
-    <p>Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players.</p>
+    <p>
+      Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents statistics of tournament attendance, comprehensive set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>More info</b></a>
+    </p>
   </header>
   <hr>
 
