--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,8 @@
     <li> more bugtesting for recognized players; heroku checkpoint </li>
     <li> reformatted user.html profile page, standardized tables </li>
     <li> added route /about and included that information in /index </li>
+    <li> created parse_challonge_standings.py to parse standings info Challonge </li>
+    <li> created parse_challonge_info.py to parse general info from a given tournament from Challonge </li>
   </ul></div></div>
   </div>
 
