parse_challonge_info.py now accounts for all levels of information available, and strips spaces and line breaks

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
     <li> added route /about and included that information in /index </li>
     <li> created parse_challonge_standings.py to parse standings info Challonge </li>
     <li> created parse_challonge_info.py to parse general info from a given tournament from Challonge </li>
+    <li> parse_challonge_info.py now accounts for all levels of information available, and strips spaces and line breaks </li>
   </ul></div></div>
   </div>
 
