refined Tournament model and connected with Users and Sets

--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -1,4 +1,4 @@
-<!-- A list of recent tournaments -->
+<!-- A list of tournaments in the database-->
 {% extends "base.html" %}
 
 {% block content %}
