--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+  <header class="jumbotron">
+    <h1> [Tournament Name]</h1>
+    <h2> [Date] </h2>
+    <h2> [Entrants] + [Bracket Type] </h2>
+  </header>
+
   <div class="panel panel-default">
   <div class="panel-heading">
     <h1><b> Sets from {{ tournament }} </b></h1>
