--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -1,9 +1,9 @@
 <!-- prints User representation in HTML given a User object, with route hyperlink to /user (profile), /region, /character -->
 <tr>
-    <td class="col-md-2 horizontal-overflow">
+    <td class="col-sm-2 horizontal-overflow">
         <b><a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a></b>
     </td>
-    <td class="col-md-2">
+    <td class="col-sm-2">
         {% if user.region %}
     	   <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a> 
     	{% else %}
@@ -11,7 +11,7 @@
 	    {% endif %}
     </td>
 
-    <td class="col-md-2">
+    <td class="col-sm-2">
     	{% if user.main %}
             <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
         {% else %}
@@ -21,7 +21,7 @@
     </td>
 
     <!-- different ways of representing User based on # of secondaries User has. pay close attention to characters that are printed outside of the variables -->
-    <td class="col-md-4">
+    <td class="col-sm-4">
     <!-- store value of user.get_secondaries() (a list of Character objects) in user_secondaries -->
     {% set user_secondaries = user.get_secondaries() -%}
     {% if user_secondaries|length > 3 %}
