successfully joined Tournament and User models

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
   <ul>
     <li> refined Tournament model and connected with Users and Sets </li>
+    <li> successfully joined Tournament and User models </li>
   </ul></div></div>
   </div>
 
