established Set and Tournament relationship, parse_challonge now queries for a true Tournament object to fill its fields

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li> refined Tournament model and connected with Users and Sets </li>
     <li> successfully joined Tournament and User models </li>
+    <li> established Set and Tournament relationship, parse_challonge now queries for a true Tournament object to fill its fields </li>
   </ul></div></div>
   </div>
 
