/tournament pages now take and display true Tournament object info, along with Sets. created tournament_display template for display in tables

--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -19,9 +19,7 @@
 
 			<tbody>
 				{% for tournament in tournamentlist %}
-					<tr>
-						<td><b><a href="{{ url_for("tournament", tournament=tournament)}}">{{tournament}}</a></b></td>
-					</tr>
+					{% include 'tournament_display.html' %}
 				{% endfor %}
 			</tbody>
 		</table>
