changed all __str__ functions to __unicode__ in models.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> successfully joined Tournament and User models </li>
     <li> established Set and Tournament relationship, parse_challonge now queries for a true Tournament object to fill its fields </li>
     <li> /tournament pages now take and display true Tournament object info, along with Sets </li>
+    <li> changed all __str__ functions to __unicode__ in models.py </li>
   </ul></div></div>
   </div>
 
