--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -13,6 +13,15 @@
 			<thead>
 				<tr>
 					<th>
+						Date
+					</th>
+
+					<th>
+						Tournament
+					</th>
+
+					<th>
+						Number of Entrants
 					</th>
 				</tr>
 			</thead>
