--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,12 @@
   </header>
   <hr>
 
+    <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
+  <ul>
+    <li> /tournament page now displays all placings of users within that tournament </li>
+  </ul></div></div>
+  </div>
+
   <div class="col-md-3 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
   <ul>
