tournament page displays placements of users within table with links

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
     <div class="thumbnail"><div class="caption scroll400"><h5> July 7, 2015 </h5>
   <ul>
     <li> /tournament page now displays all placings of users within that tournament </li>
+    <li> tournament page displays placements of users within table with links </li>
   </ul></div></div>
   </div>
 
