modularized parse_challonge functions and reworked main function

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> /tournament page now displays all placings of users within that tournament </li>
     <li> tournament page displays placements of users within table with links </li>
     <li> now sanitizes Users when parsing Challonge placings (even before parsing sets). Tournament model fully integrated </li>
+    <li> modularized parse_challonge functions and reworked main function </li>
   </ul></div></div>
   </div>
 
