--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> tournament page displays placements of users within table with links </li>
     <li> now sanitizes Users when parsing Challonge placings (even before parsing sets). Tournament model fully integrated </li>
     <li> modularized parse_challonge functions and reworked main function </li>
+    <li> /head_to_head now displays match records for Sets with no Match objects available </li>
   </ul></div></div>
   </div>
 
