--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -44,6 +44,17 @@
 
   <div class="panel panel-default">
   <div class="panel-heading">
+    <h2><b> {{ user.tag }}'s Tournament History </b></h2>
+  </div>
+
+  <div class="panel-body">
+    <table class="table bootstrap-datatable table-hover">
+    </table>
+  </div>
+  </div>
+
+  <div class="panel panel-default">
+  <div class="panel-heading">
     <h2><b>{{ user.tag }}'s Set History</b></h2>
   </div>
 
