--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
     <li> now sanitizes Users when parsing Challonge placings (even before parsing sets). Tournament model fully integrated </li>
     <li> modularized parse_challonge functions and reworked main function </li>
     <li> /head_to_head now displays match records for Sets with no Match objects available </li>
+    <li> /tournament now displays placements from least to greatest, and Users added from import_challonge_placings are sanitized first in parse_challonge_standings </li>
   </ul></div></div>
   </div>
 
