/search_results now query and match Tournament model, and display matching Tournament objects in table

--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -12,17 +12,9 @@
 		<table class="table bootstrap-datatable table-hover">
 			<thead>
 				<tr>
-					<th>
-						Date
-					</th>
-
-					<th>
-						Tournament
-					</th>
-
-					<th>
-						Number of Entrants
-					</th>
+					<th>Date</th>
+					<th>Tournament</th>
+					<th>Number of Entrants</th>
 				</tr>
 			</thead>
 
