--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
     <li> modularized parse_challonge functions and reworked main function </li>
     <li> /head_to_head now displays match records for Sets with no Match objects available </li>
     <li> /tournament now displays placements from least to greatest, and Users added from import_challonge_placings are sanitized first in parse_challonge_standings </li>
+    <li> /search_results now query and match Tournament model, and display matching Tournament objects in table </li>
   </ul></div></div>
   </div>
 
