--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -21,20 +21,28 @@
 
 	<div class="panel panel-default">
 	<div class="panel-heading">
-	  <h3><b>Tournaments named "{{ query }}"</b></h3>
+		<h2><b> Tournaments named "{{ query }}" </b></h2>
 	</div>
 
 	<div class="panel-body">
-		<table class"=table bootstrap-datatable table-hover">
-			<body>
-			  {% for tournament in tournament_results %}
-			  	<a href="{{url_for('tournament', tournament=tournament)}}">{{ tournament }}</a>
-			  {% endfor %}
-			 </body>
-			</table>
-		</div>
+		<table class="table bootstrap-datatable table-hover">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Tournament</th>
+					<th>Number of Entrants</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				{% for tournament in tournament_results %}
+					{% include 'tournament_display.html' %}
+				{% endfor %}
+			</tbody>
+		</table>
 	</div>
 
 	</div>
+</div>
 
 {% endblock %}
