/tournament page accurately displays placements from least to greatest, using a dictionary passed to templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,13 @@
   <hr>
 
   <div class="col-sm-3 hero-feature">
+  <div class="thumbnail"><div class="caption scroll400"><h5> July 11, 2015 </h5>
+  <ul>
+    <li> /tournament page accurately displays placements from least to greatest, using a dictionary passed to templates </li>
+  </ul></div></div>
+  </div>
+
+  <div class="col-sm-3 hero-feature">
   <div class="thumbnail"><div class="caption scroll400"><h5> July 10, 2015 </h5>
   <ul>
     <li> /tournament page now displays all placings of users within that tournament </li>
