--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <div class="thumbnail"><div class="caption scroll400"><h5> July 11, 2015 </h5>
   <ul>
     <li> /tournament page accurately displays placements from least to greatest, using a dictionary passed to templates </li>
+    <li> top players regex expressions now key to capitalized tags (i.e. mango -> Mango) </li>
   </ul></div></div>
   </div>
 
