--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -42,22 +42,22 @@
   </header>
   <hr>
 
+  <!-- Table for displaying User's Tournament History -->
   <div class="panel panel-default">
   <div class="panel-heading">
     <h2><b> {{ user.tag }}'s Tournament History </b></h2>
   </div>
-
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
     </table>
   </div>
   </div>
 
+  <!-- Table for displaying User's Sets -->
   <div class="panel panel-default">
   <div class="panel-heading">
     <h2><b>{{ user.tag }}'s Set History</b></h2>
   </div>
-
   <div class="panel-body">
     <table class="table bootstrap-datatable table-hover">
       <thead>
