/user page now displays all tournaments a User has placed in, along with his respective placement

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
   <ul>
     <li> /tournament page accurately displays placements from least to greatest, using a dictionary passed to templates </li>
     <li> top players regex expressions now key to capitalized tags (i.e. mango -> Mango) </li>
+    <li> /user page now displays all tournaments a User has placed in, along with his respective placement </li>
   </ul></div></div>
   </div>
 
