--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -48,7 +48,21 @@
     <h2><b> {{ user.tag }}'s Tournament History </b></h2>
   </div>
   <div class="panel-body">
-    <table class="table bootstrap-datatable table-hover">
+    <table class="table bootstrap-datatable table-condensed table-hover">
+      <!-- Empty header (generates navy-colored divider) -->
+      <thead>
+        <tr>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      {% for tournament in user_placements %}
+      <tr>
+        <td class="col-sm-6 text-right"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }}:</a></b></td>
+        <td class="col-sm-6 text-left"><b> {{ user_placements[tournament] }} </b></td>
+      </tr>
+      {% endfor %}
     </table>
   </div>
   </div>
