--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> /tournament page accurately displays placements from least to greatest, using a dictionary passed to templates </li>
     <li> top players regex expressions now key to capitalized tags (i.e. mango -> Mango) </li>
     <li> /user page now displays all tournaments a User has placed in, along with his respective placement </li>
+    <li> /head_to_head page now displays all mutual tournaments attended and placings two users have </li>
   </ul></div></div>
   </div>
 
